--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,7 @@
 {
   "diagnostic.errorSign": "✘",
-  "diagnostic.warningSign": "",
-  "diagnostic.infoSign": ""
+  "diagnostic.warningSign": "⚠",
+  "diagnostic.infoSign": "○",
+  "diagnostic.hintSign": "",
+  "diagnostic.level": "hint"
 }
