Get rid of COC's inlay hints

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -3,5 +3,6 @@
   "diagnostic.warningSign": "⚠",
   "diagnostic.infoSign": "○",
   "diagnostic.hintSign": "",
-  "diagnostic.level": "hint"
+  "diagnostic.level": "hint",
+  "inlayHint.enable": false
 }
